fix spacing around project elements

--- a/css/custom.css
+++ b/css/custom.css
@@ -125,14 +125,11 @@ h4.project-title{
 }
 
 div.project-image img{
-  width: 100%;
-  max-width: 600px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-div.project-image{
-  width: auto;
-  height: auto;
-}
+
 
 .socialmedia a, .socialmedia a:visited {
   font-family: 'social_font';
@@ -141,7 +138,7 @@ div.project-image{
   color: #222222;
 }
 
-.socialmedia:hover{
+.socialmedia a:hover{
   color: #00C9D0;
 }
 
